--- a/main.tex
+++ b/main.tex
@@ -51,4 +51,6 @@ We are working on
 \draw (0,0) circle [radius=1cm];
 \draw (3mm,0mm) arc [start angle=0, end angle=30, radius=3mm];
 \end{tikzpicture}
+
+\tikz \draw (0,0) rectangle (1,1) (0,0) parabola (1,1);
 \end{document}
