parabola custom bend

--- a/main.tex
+++ b/main.tex
@@ -53,4 +53,5 @@ We are working on
 \end{tikzpicture}
 
 \tikz \draw (0,0) rectangle (1,1) (0,0) parabola (1,1);
+\tikz \draw[x=1pt,y=1pt] (0,0) parabola bend (2,16) (6,12);
 \end{document}
