--- a/main.tex
+++ b/main.tex
@@ -54,4 +54,5 @@ We are working on
 
 \tikz \draw (0,0) rectangle (1,1) (0,0) parabola (1,1);
 \tikz \draw[x=1pt,y=1pt] (0,0) parabola bend (2,16) (6,12);
+A sine \tikz \draw[x=1ex,y=1ex,scale=3] (0,0) sin (1.57,1); curve.
 \end{document}
