--- a/main.tex
+++ b/main.tex
@@ -55,4 +55,6 @@ We are working on
 \tikz \draw (0,0) rectangle (1,1) (0,0) parabola (1,1);
 \tikz \draw[x=1pt,y=1pt] (0,0) parabola bend (2,16) (6,12);
 A sine \tikz \draw[x=1ex,y=1ex,scale=3] (0,0) sin (1.57,1); curve.
+\tikz \draw[x=1.57ex,y=1ex] (0,0) sin (1,1) cos (2,0) sin (3,-1) cos (4,0)
+(0,1) cos (1,0) sin (2,-1) cos (3,0) sin (4,1);
 \end{document}
