--- a/main.tex
+++ b/main.tex
@@ -57,4 +57,14 @@ We are working on
 A sine \tikz \draw[x=1ex,y=1ex,scale=3] (0,0) sin (1.57,1); curve.
 \tikz \draw[x=1.57ex,y=1ex] (0,0) sin (1,1) cos (2,0) sin (3,-1) cos (4,0)
 (0,1) cos (1,0) sin (2,-1) cos (3,0) sin (4,1);
+
+\begin{tikzpicture}[scale=3]
+\clip (-0.1,-0.2) rectangle (1.1,0.75);
+\draw[step=.5cm,gray,very thin] (-1.4,-1.4) grid (1.4,1.4);
+\draw (-1.5,0) -- (1.5,0);
+\draw (0,-1.5) -- (0,1.5);
+\draw (0,0) circle [radius=1cm];
+\fill[green!20!white] (0,0) -- (3mm,0mm)
+arc [start angle=0, end angle=30, radius=3mm] -- (0,0);
+\end{tikzpicture}
 \end{document}
