--- a/main.tex
+++ b/main.tex
@@ -65,6 +65,6 @@ A sine \tikz \draw[x=1ex,y=1ex,scale=3] (0,0) sin (1.57,1); curve.
 \draw (0,-1.5) -- (0,1.5);
 \draw (0,0) circle [radius=1cm];
 \fill[green!20!white] (0,0) -- (3mm,0mm)
-arc [start angle=0, end angle=30, radius=3mm] -- (0,0);
+arc [start angle=0, end angle=30, radius=3mm] -- cycle;
 \end{tikzpicture}
 \end{document}
