--- a/main.tex
+++ b/main.tex
@@ -67,4 +67,10 @@ A sine \tikz \draw[x=1ex,y=1ex,scale=3] (0,0) sin (1.57,1); curve.
 \fill[green!20!white] (0,0) -- (3mm,0mm)
 arc [start angle=0, end angle=30, radius=3mm] -- cycle;
 \end{tikzpicture}
+
+\begin{tikzpicture}[line width=5pt]
+\draw (0,0) -- (1,0) -- (1,1) -- (0,0);
+\draw (2,0) -- (3,0) -- (3,1) -- cycle;
+\useasboundingbox (0,1.5); % make bounding box higher
+\end{tikzpicture}
 \end{document}
