--- a/main.tex
+++ b/main.tex
@@ -73,4 +73,14 @@ arc [start angle=0, end angle=30, radius=3mm] -- cycle;
 \draw (2,0) -- (3,0) -- (3,1) -- cycle;
 \useasboundingbox (0,1.5); % make bounding box higher
 \end{tikzpicture}
+
+\begin{tikzpicture}[scale=3]
+\clip (-0.1,-0.2) rectangle (1.1,0.75);
+\draw[step=.5cm,gray,very thin] (-1.4,-1.4) grid (1.4,1.4);
+\draw (-1.5,0) -- (1.5,0);
+\draw (0,-1.5) -- (0,1.5);
+\draw (0,0) circle [radius=1cm];
+\filldraw[fill=green!20!white, draw=green!50!black] (0,0) -- (3mm,0mm)
+arc [start angle=0, end angle=30, radius=3mm] -- cycle;
+\end{tikzpicture}
 \end{document}
