--- a/main.tex
+++ b/main.tex
@@ -83,4 +83,6 @@ arc [start angle=0, end angle=30, radius=3mm] -- cycle;
 \filldraw[fill=green!20!white, draw=green!50!black] (0,0) -- (3mm,0mm)
 arc [start angle=0, end angle=30, radius=3mm] -- cycle;
 \end{tikzpicture}
+\tikz \shade (0,0) rectangle (2,1)
+(3,0.5) circle (.5cm);
 \end{document}
