--- a/main.tex
+++ b/main.tex
@@ -84,5 +84,11 @@ arc [start angle=0, end angle=30, radius=3mm] -- cycle;
 arc [start angle=0, end angle=30, radius=3mm] -- cycle;
 \end{tikzpicture}
 \tikz \shade (0,0) rectangle (2,1)
-(3,0.5) circle (.5cm);
+(3,0.5) circle (.5cm); \\
+\begin{tikzpicture}[rounded corners,ultra thick]
+\shade[top color=yellow,bottom color=black] (0,0) rectangle +(2,1);
+\shade[left color=yellow,right color=black] (3,0) rectangle +(2,1);
+\shadedraw[inner color=yellow,outer color=black,draw=yellow] (6,0) rectangle +(2,1);
+\shade[ball color=green] (9,.5) circle (.5cm);
+\end{tikzpicture}
 \end{document}
