--- a/main.tex
+++ b/main.tex
@@ -89,6 +89,17 @@ arc [start angle=0, end angle=30, radius=3mm] -- cycle;
 \shade[top color=yellow,bottom color=black] (0,0) rectangle +(2,1);
 \shade[left color=yellow,right color=black] (3,0) rectangle +(2,1);
 \shadedraw[inner color=yellow,outer color=black,draw=yellow] (6,0) rectangle +(2,1);
-\shade[ball color=green] (9,.5) circle (.5cm);
+\shade[ball color=green] (9,.5) circle (.5cm);\\
+\end{tikzpicture}
+
+\begin{tikzpicture}[scale=3]
+\clip (-0.1,-0.2) rectangle (1.1,0.75);
+\draw[step=.5cm,gray,very thin] (-1.4,-1.4) grid (1.4,1.4);
+\draw (-1.5,0) -- (1.5,0);
+\draw (0,-1.5) -- (0,1.5);
+\draw (0,0) circle [radius=1cm];
+\shadedraw[left color=gray,right color=green, draw=green!50!black]
+(0,0) -- (3mm,0mm)
+arc [start angle=0, end angle=30, radius=3mm] -- cycle;
 \end{tikzpicture}
 \end{document}
