line touching circle

--- a/main.tex
+++ b/main.tex
@@ -68,11 +68,7 @@ A sine \tikz \draw[x=1ex,y=1ex,scale=3] (0,0) sin (1.57,1); curve.
 arc [start angle=0, end angle=30, radius=3mm] -- cycle;
 \end{tikzpicture}
 
-\begin{tikzpicture}[line width=5pt]
-\draw (0,0) -- (1,0) -- (1,1) -- (0,0);
-\draw (2,0) -- (3,0) -- (3,1) -- cycle;
-\useasboundingbox (0,1.5); % make bounding box higher
-\end{tikzpicture}
+
 
 \begin{tikzpicture}[scale=3]
 \clip (-0.1,-0.2) rectangle (1.1,0.75);
@@ -82,24 +78,7 @@ arc [start angle=0, end angle=30, radius=3mm] -- cycle;
 \draw (0,0) circle [radius=1cm];
 \filldraw[fill=green!20!white, draw=green!50!black] (0,0) -- (3mm,0mm)
 arc [start angle=0, end angle=30, radius=3mm] -- cycle;
-\end{tikzpicture}
-\tikz \shade (0,0) rectangle (2,1)
-(3,0.5) circle (.5cm); \\
-\begin{tikzpicture}[rounded corners,ultra thick]
-\shade[top color=yellow,bottom color=black] (0,0) rectangle +(2,1);
-\shade[left color=yellow,right color=black] (3,0) rectangle +(2,1);
-\shadedraw[inner color=yellow,outer color=black,draw=yellow] (6,0) rectangle +(2,1);
-\shade[ball color=green] (9,.5) circle (.5cm);\\
+\draw[red,very thick] (30:1cm) -- +(0,-0.5);
 \end{tikzpicture}
 
-\begin{tikzpicture}[scale=3]
-\clip (-0.1,-0.2) rectangle (1.1,0.75);
-\draw[step=.5cm,gray,very thin] (-1.4,-1.4) grid (1.4,1.4);
-\draw (-1.5,0) -- (1.5,0);
-\draw (0,-1.5) -- (0,1.5);
-\draw (0,0) circle [radius=1cm];
-\shadedraw[left color=gray,right color=green, draw=green!50!black]
-(0,0) -- (3mm,0mm)
-arc [start angle=0, end angle=30, radius=3mm] -- cycle;
-\end{tikzpicture}
 \end{document}
